Blur glow buffer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,7 @@ set(EMBEDDED_INPUT
         shaders/PostFXAA.frag
         shaders/PostFog.frag
         shaders/PostGamma.frag
-        shaders/PostGlowFirstPass.frag
+        shaders/PostGlowBlur.frag
         shaders/Deferred.frag
         shaders/Particle.vert
         shaders/Particle.geom
@@ -202,7 +202,7 @@ set(ENGINE_SRCS
         src/Engine/PostProcessing/FXAAFilter.cpp
         src/Engine/PostProcessing/FogFilter.cpp
         src/Engine/PostProcessing/GammaCorrectionFilter.cpp
-        src/Engine/PostProcessing/GlowFirstPassFilter.cpp
+        src/Engine/PostProcessing/GlowBlurFilter.cpp
         src/Engine/GameObject/SuperGameObject.cpp
     )
 
@@ -258,7 +258,7 @@ set(ENGINE_HEADERS
         src/Engine/PostProcessing/FXAAFilter.hpp
         src/Engine/PostProcessing/FogFilter.hpp
         src/Engine/PostProcessing/GammaCorrectionFilter.hpp
-        src/Engine/PostProcessing/GlowFirstPassFilter.hpp
+        src/Engine/PostProcessing/GlowBlurFilter.hpp
         src/Engine/GameObject/SuperGameObject.hpp
     )
 
