--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,6 +274,7 @@ set(GAME_SRCS
         src/Game/Util/CameraUpdate.cpp
         src/Game/Util/ControlSchemes.cpp
         src/Game/Util/MainCamera.cpp
+        src/Game/Util/CaveGenerator.cpp
         src/Game/CaveSystem/CaveSystem.cpp
         src/Game/System/ControllerSystem.cpp
         src/Game/System/HealthSystem.cpp
@@ -304,6 +305,7 @@ set(GAME_HEADERS
         src/Game/Util/CameraUpdate.hpp
         src/Game/Util/ControlSchemes.hpp
         src/Game/Util/MainCamera.hpp
+        src/Game/Util/CaveGenerator.hpp
         src/Game/CaveSystem/CaveSystem.hpp
         src/Game/System/ControllerSystem.hpp
         src/Game/System/HealthSystem.hpp
