Add assets to CMakeLists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,25 @@ set(RESOURCES
         assets/Laser.ogg
         assets/GolfBall.obj
         assets/ship.obj
+        assets/ship_body.obj
+        assets/ship_body_diff.png
+        assets/ship_body_spec.png
+        assets/ship_body_glow.png
+        assets/ship_frontEngine.obj
+        assets/ship_frontEngine_diff.png
+        assets/ship_backEngine.obj
+        assets/ship_backEngine_diff.png
+        assets/wall2_diff.png
+        assets/wall2_norm.png
+        assets/wall2_spec.png
+        assets/enemy_head_crystal.obj
+        assets/enemy_head_crystal_diff.png
+        assets/enemy_head_crystal_spec.png
+        assets/enemy_head_crystal_glow.png
+        assets/enemy_tail_crystal.obj
+        assets/enemy_tail_crystal_diff.png
+        assets/enemy_tail_crystal_spec.png
+        assets/enemy_tail_crystal_glow.png
         assets/Normal.png
         assets/Height.png
         assets/Glow.png
