--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,6 +184,7 @@ set(ENGINE_SRCS
         src/Engine/Geometry/Geometry2D.cpp
         src/Engine/Geometry/Square.cpp
         src/Engine/Geometry/Geometry3D.cpp
+        src/Engine/Geometry/Terrain.cpp
         src/Engine/Geometry/Cube.cpp
         src/Engine/Geometry/OBJModel.cpp
         src/Engine/Geometry/Map.cpp
@@ -243,6 +244,7 @@ set(ENGINE_HEADERS
         src/Engine/Geometry/Geometry2D.hpp
         src/Engine/Geometry/Square.hpp
         src/Engine/Geometry/Geometry3D.hpp
+        src/Engine/Geometry/Terrain.hpp
         src/Engine/Geometry/Cube.hpp
         src/Engine/Geometry/OBJModel.hpp
         src/Engine/Geometry/Map.hpp
