--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ endif()
 # Copy resources
 set(RESOURCES
         assets/ABeeZee.ttf
+        assets/Mugglorna.png
         assets/TestTexture.png
         assets/DefaultDiffuse.png
         assets/DefaultNormal.png
