--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -226,6 +226,7 @@ set(ENGINE_SRCS
         src/Engine/Geometry/Square.cpp
         src/Engine/Geometry/Geometry3D.cpp
         src/Engine/Geometry/Cube.cpp
+        src/Engine/Geometry/Plane.cpp
         src/Engine/Geometry/OBJModel.cpp
         src/Engine/Geometry/Map.cpp
         src/Engine/Lighting/DeferredLighting.cpp
@@ -286,6 +287,7 @@ set(ENGINE_HEADERS
         src/Engine/Geometry/Square.hpp
         src/Engine/Geometry/Geometry3D.hpp
         src/Engine/Geometry/Cube.hpp
+        src/Engine/Geometry/Plane.hpp
         src/Engine/Geometry/OBJModel.hpp
         src/Engine/Geometry/Map.hpp
         src/Engine/Lighting/DeferredLighting.hpp
