Added perlin noise to heightmap.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,6 +354,7 @@ set(GAME_SRCS
         src/Game/Util/ControlSchemes.cpp
         src/Game/Util/MainCamera.cpp
         src/Game/Util/CaveGenerator.cpp
+		src/Game/Util/PerlinNoise.cpp
         src/Game/System/ControllerSystem.cpp
         src/Game/System/HealthSystem.cpp
         src/Game/System/DamageSystem.cpp
@@ -400,6 +401,7 @@ set(GAME_HEADERS
         src/Game/Util/ControlSchemes.hpp
         src/Game/Util/MainCamera.hpp
         src/Game/Util/CaveGenerator.hpp
+		src/Game/Util/PerlinNoise.hpp
         src/Game/System/ControllerSystem.hpp
         src/Game/System/HealthSystem.hpp
         src/Game/System/DamageSystem.hpp
