Play sound when things explode.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,11 @@ set(RESOURCES
         assets/MusicAction.ogg
         assets/MusicCalm.ogg
         assets/Laser.ogg
+        assets/Explosion01.ogg
+        assets/Explosion02.ogg
+        assets/Explosion03.ogg
+        assets/Explosion04.ogg
+        assets/Explosion05.ogg
     )
 
 add_custom_target(ResourceTarget ALL)
