--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,10 +132,16 @@ set(RESOURCES
         assets/spawn/pillar/pillar_glow.png
         assets/spawn/pillar/pillar.obj
         assets/spawn/portal/portal.obj
+        assets/diamoned/pillar/diamond_body.obj
+        assets/nest/nest_body.obj
+        assets/ring/ring_body.obj
+        assets/ringSegment/ring_segment.obj
+        assets/rocket/rocket_body.obj
         assets/wall_diff.png
         assets/wall_norm.png
         assets/wall2_diff.png
         assets/wall2_norm.png
+        assets/wall2_spec.png
         assets/GolfBall.obj
         assets/MusicAction.ogg
         assets/MusicCalm.ogg
