Added hp textures for player2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,8 @@ set(RESOURCES
         assets/player1/player1_turret_barrel.obj
         assets/player1/player1_turret_body.obj
         assets/player2/player2_diff.png
+        assets/player2/player2_diff_medium_damage.png
+        assets/player2/player2_diff_heavy_damage.png
         assets/player2/player2_glow.png
         assets/player2/player2_norm.png
         assets/player2/player2_spec.png
