--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -420,6 +420,7 @@ set(GAME_SRCS
         src/Game/GameScenes/JonathanScene.cpp
         src/Game/GameScenes/EmptyScene.cpp
         src/Game/GameScenes/WinScene.cpp
+        src/Game/GameScenes/LoadingScene.cpp
         src/Game/GameObject/Bullet.cpp
         src/Game/GameObject/Player/SuperPlayer.cpp
         src/Game/GameObject/Player/Player1.cpp
@@ -482,6 +483,7 @@ set(GAME_HEADERS
         src/Game/GameScenes/JonathanScene.hpp
         src/Game/GameScenes/EmptyScene.hpp
         src/Game/GameScenes/WinScene.hpp
+        src/Game/GameScenes/LoadingScene.hpp
         src/Game/GameObject/Bullet.hpp
         src/Game/GameObject/Player/SuperPlayer.hpp
         src/Game/GameObject/Player/Player1.hpp
