--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -440,6 +440,7 @@ set(GAME_SRCS
         src/Game/GameObject/PillarBall.cpp
         src/Game/GameObject/Portal.cpp
         src/Game/Menu/Menu.cpp
+        src/Game/Menu/MenuOption.cpp
     )
 
 set(GAME_HEADERS
@@ -502,7 +503,8 @@ set(GAME_HEADERS
         src/Game/GameObject/Pillar.hpp
         src/Game/GameObject/PillarBall.hpp
         src/Game/GameObject/Portal.hpp
-        src/Game/Menu/Menu.cpp
+        src/Game/Menu/Menu.hpp
+        src/Game/Menu/MenuOption.hpp
     )
 
 create_directory_groups(${GAME_SRCS} ${GAME_HEADERS})
