Main menu class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -426,6 +426,7 @@ set(GAME_SRCS
         src/Game/GameObject/Portal.cpp
         src/Game/Menu/Menu.cpp
         src/Game/Menu/SubMenu.cpp
+        src/Game/Menu/MainMenu.cpp
         src/Game/Menu/MenuOption.cpp
     )
 
@@ -494,6 +495,7 @@ set(GAME_HEADERS
         src/Game/GameObject/Portal.hpp
         src/Game/Menu/Menu.hpp
         src/Game/Menu/SubMenu.hpp
+        src/Game/Menu/MainMenu.hpp
         src/Game/Menu/MenuOption.hpp
     )
 
