--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -425,6 +425,7 @@ set(GAME_SRCS
         src/Game/GameObject/Boss/RingBoss.cpp
         src/Game/GameObject/Altar.cpp
         src/Game/GameObject/Pillar.cpp
+        src/Game/GameObject/Rock.cpp
         src/Game/GameObject/PillarBall.cpp
         src/Game/GameObject/Portal.cpp
     )
@@ -493,6 +494,7 @@ set(GAME_HEADERS
         src/Game/GameObject/Boss/RingBoss.hpp
         src/Game/GameObject/Altar.hpp
         src/Game/GameObject/Pillar.hpp
+        src/Game/GameObject/Rock.hpp
         src/Game/GameObject/PillarBall.hpp
         src/Game/GameObject/Portal.hpp
     )
