Added asset to Cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,7 @@ set(RESOURCES
         assets/spawn/pillar/pillar_glow.png
         assets/spawn/pillar/pillar.obj
         assets/spawn/portal/portal.obj
+        assets/stones/stone_01_glow.png
         assets/stones/stone_01.obj
         assets/stones/stone_02.obj
         assets/stones/stone_03.obj
