--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -444,7 +444,9 @@ set(GAME_SRCS
         src/Game/Menu/SubMenu.cpp
         src/Game/Menu/MainMenu.cpp
         src/Game/Menu/OptionsMenu.cpp
+        src/Game/Menu/SuperMenuOption.cpp
         src/Game/Menu/MenuOption.cpp
+        src/Game/Menu/MenuSwitch.cpp
     )
 
 set(GAME_HEADERS
@@ -516,7 +518,9 @@ set(GAME_HEADERS
         src/Game/Menu/SubMenu.hpp
         src/Game/Menu/MainMenu.hpp
         src/Game/Menu/OptionsMenu.hpp
+        src/Game/Menu/SuperMenuOption.hpp
         src/Game/Menu/MenuOption.hpp
+        src/Game/Menu/MenuSwitch.hpp
     )
 
 create_directory_groups(${GAME_SRCS} ${GAME_HEADERS})
