--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -205,6 +205,8 @@ set(EMBEDDED_INPUT
         shaders/Particle.vert
         shaders/Particle.geom
         shaders/Particle.frag
+        shaders/Water.geom
+        shaders/Water.frag
     )
 
 # Headerize
