--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -472,6 +472,7 @@ set(GAME_SRCS
         src/Game/Menu/SubMenu.cpp
         src/Game/Menu/MainMenu.cpp
         src/Game/Menu/OptionsMenu.cpp
+        src/Game/Menu/PauseMenu.cpp
         src/Game/Menu/SuperMenuOption.cpp
         src/Game/Menu/MenuOption.cpp
         src/Game/Menu/MenuSwitch.cpp
@@ -548,6 +549,7 @@ set(GAME_HEADERS
         src/Game/Menu/SubMenu.hpp
         src/Game/Menu/MainMenu.hpp
         src/Game/Menu/OptionsMenu.hpp
+        src/Game/Menu/PauseMenu.hpp
         src/Game/Menu/SuperMenuOption.hpp
         src/Game/Menu/MenuOption.hpp
         src/Game/Menu/MenuSwitch.hpp
